// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass on fixtures/rules/best-practices/best-practices.js 1`] = `
Array [
  Object {
    "column": 22,
    "line": 17,
    "rule": "array-callback-return",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 65,
    "rule": "curly",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 78,
    "rule": "default-case",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 101,
    "rule": "dot-location",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 117,
    "rule": "dot-notation",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 131,
    "rule": "eqeqeq",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 131,
    "rule": "eqeqeq",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 161,
    "rule": "no-alert",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 162,
    "rule": "no-alert",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 163,
    "rule": "no-alert",
    "severity": 1,
  },
  Object {
    "column": 9,
    "line": 174,
    "rule": "no-caller",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 185,
    "rule": "no-case-declarations",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 219,
    "rule": "no-else-return",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 246,
    "rule": "no-empty-pattern",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 268,
    "rule": "no-eval",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 273,
    "rule": "no-extend-native",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 281,
    "rule": "no-extra-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 297,
    "rule": "no-fallthrough",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 323,
    "rule": "no-floating-decimal",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 333,
    "rule": "no-global-assign",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 334,
    "rule": "no-global-assign",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 351,
    "rule": "no-implied-eval",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 360,
    "rule": "no-invalid-this",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 372,
    "rule": "no-iterator",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 379,
    "rule": "no-labels",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 380,
    "rule": "no-labels",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 388,
    "rule": "no-lone-blocks",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 405,
    "rule": "no-loop-func",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 423,
    "rule": "no-multi-spaces",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 427,
    "rule": "no-multi-spaces",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 449,
    "rule": "no-new",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 456,
    "rule": "no-new-func",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 467,
    "rule": "no-new-wrappers",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 495,
    "rule": "no-proto",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 508,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 509,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 527,
    "rule": "no-return-assign",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 551,
    "rule": "no-script-url",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 559,
    "rule": "no-self-assign",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 568,
    "rule": "no-self-compare",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 577,
    "rule": "no-sequences",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 586,
    "rule": "no-throw-literal",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 599,
    "rule": "no-unmodified-loop-condition",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 610,
    "rule": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 623,
    "rule": "no-useless-call",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 636,
    "rule": "no-useless-concat",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 652,
    "rule": "no-useless-escape",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 666,
    "rule": "no-useless-return",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 684,
    "rule": "no-void",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 691,
    "rule": "no-warning-comments",
    "severity": 1,
  },
  Object {
    "column": 54,
    "line": 702,
    "rule": "prefer-promise-reject-errors",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 713,
    "rule": "radix",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 732,
    "rule": "wrap-iife",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 749,
    "rule": "yoda",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/best-practices-non-strict.js 1`] = `
Array [
  Object {
    "column": 17,
    "line": 7,
    "rule": "no-octal",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 18,
    "rule": "no-octal-escape",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 32,
    "rule": "no-with",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/es5/best-practices.js 1`] = `
Array [
  Object {
    "column": 17,
    "line": 11,
    "rule": "block-scoped-var",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 27,
    "rule": "no-redeclare",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 41,
    "rule": "vars-on-top",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/es8/best-practices.js 1`] = `
Array [
  Object {
    "column": 16,
    "line": 8,
    "rule": "no-return-await",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 22,
    "rule": "require-await",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/no-implicit-globals/no-implicit-globals.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 5,
    "rule": "no-implicit-globals",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/errors/errors.js 1`] = `
Array [
  Object {
    "column": 9,
    "line": 11,
    "rule": "no-compare-neg-zero",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 30,
    "rule": "no-cond-assign",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 61,
    "rule": "no-constant-condition",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 76,
    "rule": "no-control-regex",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 83,
    "rule": "no-debugger",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 89,
    "rule": "no-dupe-args",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 89,
    "rule": "no-redeclare",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 105,
    "rule": "no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 123,
    "rule": "no-duplicate-case",
    "severity": 2,
  },
  Object {
    "column": 26,
    "line": 147,
    "rule": "no-empty",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 158,
    "rule": "no-empty-character-class",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 174,
    "rule": "no-extra-boolean-cast",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 190,
    "rule": "no-extra-parens",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 207,
    "rule": "no-extra-semi",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 216,
    "rule": "no-func-assign",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 234,
    "rule": "no-inner-declarations",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 250,
    "rule": "no-invalid-regexp",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 263,
    "rule": "new-cap",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 263,
    "rule": "no-obj-calls",
    "severity": 2,
  },
  Object {
    "column": 47,
    "line": 272,
    "rule": "no-prototype-builtins",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 286,
    "rule": "no-regex-spaces",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 296,
    "rule": "no-sparse-arrays",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 296,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 303,
    "rule": "no-template-curly-in-string",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 316,
    "rule": "no-unreachable",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 333,
    "rule": "no-unsafe-finally",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 340,
    "rule": "no-unsafe-negation",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 351,
    "rule": "use-isnan",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 366,
    "rule": "valid-typeof",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/errors/es8/errors.js 1`] = `
Array [
  Object {
    "column": 20,
    "line": 13,
    "rule": "no-await-in-loop",
    "severity": 1,
  },
]
`;

exports[`should pass on fixtures/rules/es6/es6.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "no-duplicate-imports",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 17,
    "rule": "arrow-body-style",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 18,
    "rule": "arrow-body-style",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 26,
    "rule": "arrow-parens",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 33,
    "rule": "arrow-spacing",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 33,
    "rule": "arrow-spacing",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 42,
    "rule": "constructor-super",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 59,
    "rule": "generator-star-spacing",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 59,
    "rule": "generator-star-spacing",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 65,
    "rule": "generator-star-spacing",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 81,
    "rule": "no-class-assign",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 95,
    "rule": "no-const-assign",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 110,
    "rule": "no-dupe-class-members",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 118,
    "rule": "no-new-symbol",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 135,
    "rule": "no-this-before-super",
    "severity": 1,
  },
  Object {
    "column": 19,
    "line": 154,
    "rule": "no-useless-computed-key",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 166,
    "rule": "no-useless-constructor",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 184,
    "rule": "no-var",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 197,
    "rule": "object-shorthand",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 216,
    "rule": "prefer-arrow-callback",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 231,
    "rule": "prefer-const",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 255,
    "rule": "prefer-numeric-literals",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 267,
    "rule": "prefer-rest-params",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 283,
    "rule": "prefer-spread",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 295,
    "rule": "prefer-template",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 303,
    "rule": "require-yield",
    "severity": 1,
  },
  Object {
    "column": 29,
    "line": 320,
    "rule": "rest-spread-spacing",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 340,
    "rule": "template-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 39,
    "line": 340,
    "rule": "template-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 349,
    "rule": "yield-star-spacing",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 349,
    "rule": "yield-star-spacing",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 355,
    "rule": "yield-star-spacing",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/jest/jest.spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/jsdoc/jsdoc.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/check-param-names",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/newline-after-description",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/require-hyphen-before-param-description",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/require-returns-type",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "valid-jsdoc",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "valid-jsdoc",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "valid-jsdoc",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "valid-jsdoc",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/node/node.js 1`] = `
Array [
  Object {
    "column": 21,
    "line": 20,
    "rule": "global-require",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 27,
    "rule": "handle-callback-err",
    "severity": 1,
  },
]
`;

exports[`should pass on fixtures/rules/react/react.js 1`] = `
Array [
  Object {
    "column": 34,
    "line": 41,
    "rule": "react/jsx-boolean-value",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 54,
    "rule": "react/jsx-closing-bracket-location",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 68,
    "rule": "react/jsx-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 50,
    "line": 68,
    "rule": "react/jsx-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 79,
    "rule": "react/jsx-equals-spacing",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 79,
    "rule": "react/jsx-equals-spacing",
    "severity": 2,
  },
  Object {
    "column": 35,
    "line": 104,
    "rule": "react/jsx-handler-names",
    "severity": 2,
  },
  Object {
    "column": 35,
    "line": 108,
    "rule": "react/jsx-handler-names",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 127,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 127,
    "rule": "react/jsx-indent-props",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 143,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 143,
    "rule": "react/jsx-indent",
    "severity": 2,
  },
  Object {
    "column": 29,
    "line": 157,
    "rule": "react/jsx-key",
    "severity": 1,
  },
  Object {
    "column": 35,
    "line": 178,
    "rule": "react/jsx-no-bind",
    "severity": 1,
  },
  Object {
    "column": 35,
    "line": 182,
    "rule": "react/jsx-no-bind",
    "severity": 1,
  },
  Object {
    "column": 22,
    "line": 207,
    "rule": "react/jsx-no-comment-textnodes",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 215,
    "rule": "react/jsx-no-comment-textnodes",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 239,
    "rule": "react/jsx-no-duplicate-props",
    "severity": 2,
  },
  Object {
    "column": 72,
    "line": 257,
    "rule": "react/jsx-no-target-blank",
    "severity": 1,
  },
  Object {
    "column": 24,
    "line": 268,
    "rule": "react/jsx-no-undef",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 282,
    "rule": "react/jsx-pascal-case",
    "severity": 2,
  },
  Object {
    "column": 31,
    "line": 302,
    "rule": "react/jsx-tag-spacing",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 313,
    "rule": "react/jsx-tag-spacing",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 332,
    "rule": "react/jsx-wrap-multilines",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 356,
    "rule": "react/no-children-prop",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 385,
    "rule": "react/no-deprecated",
    "severity": 1,
  },
  Object {
    "column": 13,
    "line": 395,
    "rule": "react/no-did-mount-set-state",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 416,
    "rule": "react/no-did-update-set-state",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 437,
    "rule": "react/no-direct-mutation-state",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 468,
    "rule": "react/no-is-mounted",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 504,
    "rule": "react/no-render-return-value",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 529,
    "rule": "react/no-string-refs",
    "severity": 2,
  },
  Object {
    "column": 48,
    "line": 529,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 560,
    "rule": "react/no-unescaped-entities",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 560,
    "rule": "react/no-unescaped-entities",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 560,
    "rule": "react/no-unescaped-entities",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 580,
    "rule": "react/no-unknown-property",
    "severity": 2,
  },
  Object {
    "column": 42,
    "line": 606,
    "rule": "react/prefer-es6-class",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 634,
    "rule": "react/prop-types",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 674,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 685,
    "rule": "react/require-render-return",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 704,
    "rule": "react/self-closing-comp",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 722,
    "rule": "react/sort-comp",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 766,
    "rule": "react/style-prop-object",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 778,
    "rule": "react/void-dom-elements-no-children",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/react/react-foreign-proptypes.js 1`] = `
Array [
  Object {
    "column": 9,
    "line": 6,
    "rule": "react/forbid-foreign-prop-types",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/react/react-jsx-extension.jsx 1`] = `
Array [
  Object {
    "column": 16,
    "line": 7,
    "rule": "react/jsx-filename-extension",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/react/react-missing-import.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 3,
    "rule": "react/react-in-jsx-scope",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/react/react-no-unused.js 1`] = `Array []`;

exports[`should pass on fixtures/rules/strict/strict.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "strict",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "strict",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/style/style.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 8,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 8,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 18,
    "rule": "block-spacing",
    "severity": 2,
  },
  Object {
    "column": 41,
    "line": 18,
    "rule": "block-spacing",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 30,
    "rule": "brace-style",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 42,
    "rule": "camelcase",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 53,
    "rule": "capitalized-comments",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 145,
    "rule": "comma-dangle",
    "severity": 2,
  },
  Object {
    "column": 32,
    "line": 160,
    "rule": "comma-spacing",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 173,
    "rule": "comma-style",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 191,
    "rule": "computed-property-spacing",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 209,
    "rule": "consistent-this",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 234,
    "rule": "func-call-spacing",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 268,
    "rule": "func-style",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 268,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 299,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 313,
    "rule": "jsx-quotes",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 325,
    "rule": "key-spacing",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 341,
    "rule": "keyword-spacing",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 379,
    "rule": "lines-around-directive",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 398,
    "rule": "max-depth",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 424,
    "rule": "max-len",
    "severity": 1,
  },
  Object {
    "column": 27,
    "line": 455,
    "rule": "max-nested-callbacks",
    "severity": 1,
  },
  Object {
    "column": 31,
    "line": 456,
    "rule": "max-nested-callbacks",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 471,
    "rule": "max-params",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 486,
    "rule": "max-statements",
    "severity": 1,
  },
  Object {
    "column": 47,
    "line": 655,
    "rule": "max-statements-per-line",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 686,
    "rule": "new-cap",
    "severity": 2,
  },
  Object {
    "column": 24,
    "line": 701,
    "rule": "new-parens",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 714,
    "rule": "newline-after-var",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 730,
    "rule": "newline-before-return",
    "severity": 2,
  },
  Object {
    "column": 53,
    "line": 746,
    "rule": "newline-per-chained-call",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 755,
    "rule": "no-array-constructor",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 768,
    "rule": "no-bitwise",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 801,
    "rule": "no-lonely-if",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 816,
    "rule": "no-mixed-operators",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 816,
    "rule": "no-mixed-operators",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 839,
    "rule": "no-multiple-empty-lines",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 861,
    "rule": "no-nested-ternary",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 861,
    "rule": "no-nested-ternary",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 884,
    "rule": "no-new-object",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 900,
    "rule": "no-plusplus",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 945,
    "rule": "no-unneeded-ternary",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 959,
    "rule": "no-whitespace-before-property",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 999,
    "rule": "object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 999,
    "rule": "object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1011,
    "rule": "object-property-newline",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 1035,
    "rule": "one-var",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 1068,
    "rule": "operator-linebreak",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 1080,
    "rule": "padded-blocks",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 1084,
    "rule": "padded-blocks",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 1099,
    "rule": "quote-props",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1115,
    "rule": "quotes",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 1131,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 1142,
    "rule": "semi-spacing",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 1171,
    "rule": "space-before-blocks",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1186,
    "rule": "space-before-function-paren",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1201,
    "rule": "space-in-parens",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1216,
    "rule": "space-infix-ops",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 1226,
    "rule": "space-unary-ops",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 1233,
    "rule": "spaced-comment",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 1234,
    "rule": "spaced-comment",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 1245,
    "rule": "template-tag-spacing",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/style/style-lines.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 1,
    "rule": "max-lines",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 4,
    "rule": "strict",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/variables/variables.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 23,
    "rule": "no-delete-var",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 36,
    "rule": "no-restricted-globals",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 67,
    "rule": "no-shadow-restricted-names",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 74,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 81,
    "rule": "no-undef-init",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 99,
    "rule": "no-use-before-define",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 111,
    "rule": "no-use-before-define",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/variables/variables-with-unused.js 1`] = `
Array [
  Object {
    "column": 11,
    "line": 8,
    "rule": "no-unused-vars",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/es5/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 17,
    "line": 7,
    "rule": "no-restricted-globals",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/es5/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es6/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es6-modules/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 5,
    "rule": "strict",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 9,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
]
`;

exports[`should pass on fixtures/samples/es6-modules/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es6-node/fileSize.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es6-node/loudException.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es7/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 12,
    "line": 7,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/es7/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es7-object-spread/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 7,
    "rule": "prefer-object-spread/prefer-object-spread",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/es7-object-spread/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es7-react/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 38,
    "line": 6,
    "rule": "react/prefer-es6-class",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 13,
    "rule": "react/jsx-no-bind",
    "severity": 1,
  },
  Object {
    "column": 65,
    "line": 13,
    "rule": "react/jsx-handler-names",
    "severity": 2,
  },
  Object {
    "column": 62,
    "line": 15,
    "rule": "react/jsx-tag-spacing",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/es7-react/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es8/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/es8-babel-parser/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 19,
    "line": 4,
    "rule": "babel/no-invalid-this",
    "severity": 2,
  },
  Object {
    "column": 27,
    "line": 11,
    "rule": "babel/semi",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 15,
    "rule": "babel/object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 29,
    "line": 19,
    "rule": "babel/new-cap",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/es8-babel-parser/contrived.good.js 1`] = `Array []`;

exports[`should pass on fixtures/samples/jest/__tests__/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/jest.spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/jest.test.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/non-test-file.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 6,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 11,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 13,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 18,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 21,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 22,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 27,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 31,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 32,
    "rule": "no-undef",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/test.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/test/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/tests/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;
